# CyberCba2077

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  fa  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: compare_bench.py  quality_score.py
.github/workflows/: bench-baseline.yml  ci.yml
benchmarks/: bench_gamemodel.cpp
include/common/: inventoryUtils.hpp  types.hpp  version.hpp
include/controller/: alertCommand.hpp  command.hpp  commandCredits.hpp  commandRegistry.hpp  locationCommand.hpp
include/model/: GameModel.hpp  agent.hpp  gameModel.hpp  helpCommand.hpp  mercenary.hpp
include/ui/: console.hpp
src/: main.cpp
src/common/: inventoryUtils.cpp  types.cpp
src/controller/: HackCommand.cpp  HackCommand.h  HackCommand.hpp  InventoryCommand.cpp  InventoryCommand.h  alertCommand.cpp  clearCommand.cpp  clearCommand.hpp  commandCredits.cpp  commandRegistry.cpp  exitCommand.cpp  exitCommand.hpp  helpCommand.cpp  helpCommand.hpp  locationCommand.cpp  logCommand.cpp  logCommand.hpp  mapCommand.cpp  mapCommand.h  missionCommad.cpp  missionCommand.cpp  missionCommand.hpp  scanCommand.cpp  scanCommand.hpp  shopCommand.cpp  shopCommand.hpp  statusCommand.cpp  statusCommand.hpp  timeCommand.cpp  timeCommand.hpp  unknownCommand.cpp  unknownCommand.hpp
src/model/: GameModel.cpp  agent.cpp  gameModel.cpp  helpCommand.cpp  mercenary.cpp
src/ui/: console.cpp
tests/: test_gamemodel.cpp
tests/common/: types_test.cpp
tests/controller/: CommandInventory_test.cpp  HackCommand_test.cpp  clearCommand_test.cpp  commandCredits_test.cpp  commandRegistry_test.cpp  exitCommand_test.cpp  locationCommand_test.cpp  scanCommand_test.cpp  shopCommand_test.cpp  timeCommand_test.cpp
tests/model/: gameModel_test.cpp
